--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,35 @@
-Flask
-snowflake-snowpark-python
-pandas
+asn1crypto==1.5.1
+blinker==1.8.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==2.2.1
+cryptography==42.0.7
+filelock==3.14.0
+Flask==3.0.3
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+platformdirs==4.2.1
+pyarrow==16.0.0
+pycparser==2.22
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
+snowflake-connector-python==3.10.0
+snowflake-snowpark-python==1.15.0
+sortedcontainers==2.4.0
+tomlkit==0.12.5
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.3
