--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asn1crypto==1.5.1
-gunicorn
 blinker==1.8.2
+Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -9,6 +9,8 @@ cloudpickle==2.2.1
 cryptography==42.0.7
 filelock==3.14.0
 Flask==3.0.3
+Flask-Compress==1.15
+gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -34,3 +36,4 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.3
+zstandard==0.22.0
